[project]
name = "langgraph-project-based-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "amadeus>=12.0.0",
    "chromadb>=1.4.0",
    "ddgs>=9.10.0",
    "faiss-cpu>=1.13.2",
    "fastapi>=0.128.0",
    "google-search-results>=2.4.2",
    "langchain>=1.2.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.5",
    "langchain-experimental>=0.4.1",
    "langchain-google-genai>=4.1.2",
    "langchain-openai>=1.1.6",
    "langchain-opentutorial>=0.0.8",
    "langgraph>=1.0.5",
    "langgraph-checkpoint-postgres>=3.0.2",
    "langgraph-checkpoint-sqlite>=3.0.1",
    "langgraph-store-mongodb>=0.1.1",
    "matplotlib>=3.10.8",
    "pdfminer>=20191125",
    "pdfminer-six>=20251230",
    "psycopg[binary,pool]>=3.3.2",
    "pypdf>=6.5.0",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.21",
    "streamlit>=1.52.2",
    "twilio>=9.9.1",
]
